9/12/2023 11:00a
    Added main.c and updated Makefile to compile to ./run

9/10/2023 4:30p
    Updated Makefile and debugged errors

9/7/2023 12:15p
    Abstracted queue data structure

8/30/2023 12:00p
    Implemented point generation logic (queue functions, Point structure, Queue structure)

8/31/2023 2:45p
    Added mountain border

9/1/2023 10:30p
    Added base path logic (with bugs)

9/2/2023 11:45p
    Added Pokimart and Pokicenter functionality
    Removed path logic bugs