@@ -3,14 +3,14 @@ CFLAGS = -ggdb -Wall -Werror
 
 all: run
 
-run: main.o terrain_generation.o queue.o
-	$(CC) $(CFLAGS) main.o terrain_generation.o queue.o -o run
+run: main.o map_generation.o queue.o
+	$(CC) $(CFLAGS) main.o map_generation.o queue.o -o run
 
 main.o: main.c
 	$(CC) $(CFLAGS) -c main.c -o main.o
 
-terrain_generation.o: terrain_generation.c terrain_generation.h
-	$(CC) $(CFLAGS) -c terrain_generation.c -o terrain_generation.o
+map_generation.o: map_generation.c map_generation.h
+	$(CC) $(CFLAGS) -c map_generation.c -o map_generation.o
 
 queue.o: queue.c queue.h
 	$(CC) $(CFLAGS) -c queue.c
@@ -19,4 +19,4 @@ tgz: clean
 	tar cvzf Assignment1_Cooper-McKee.tgz --exclude=.vscode *
 
 clean:
-	rm -f *.o terrain_generation *.tgz run
+	rm -f *.o map_generation *.tgz run
