@@ -1,9 +1,0 @@
-#include <stdint.h>
-#include <stdlib.h>
-
-#ifndef TERRAIN_GENERATION_H
-#define TERRAIN_GENERATION_H
-
-char** generate_terrain();
-
-#endif
